增加一些需要忽略的文件、目录。

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 /.aspell.en.prepl
 /.authinfo
 /.bash_history
+/.bashrc-postprocess
 /.cache/*
 /.config/*
 /.cvspass
@@ -31,6 +32,7 @@
 /.gnome/*
 /.gnupg/*
 /.gnuplot_history
+/.gnuplot-wxt
 /.htoprc
 /.irb_history
 /.lesshst
@@ -39,25 +41,29 @@
 /.mc/*
 /.mozilla/*
 /.msmtprc
+/.mysql_history
 /.netrc
 /.privatebashrc
 /.pulse-cookie
 /.qt/*
 /.recently-used.xbel
 /.rnd
+/.ruby_inline/*
 /.scim/*
 /.sdcv_history
 /.sqlite_history
 /.ssh
 /.subversion/*
+/.sudo_as_admin_successful
 /.synaptic/*
 /.texmf-var/*
 /.tor/*
 /.viminfo
 /.vnc/*
 /.w3m/*
-/.xinput.d/*
 /.Xauthority
+/.xinput.d/*
+/.xdvirc
 /.xmms/*
 /devspace/*
 /muse/*
