--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,4 +1,4 @@
-set-option -g default-terminal screen-256color
+set-option -g default-terminal xterm-256color
 
 set-option -g prefix C-l
 unbind-key C-b
