增加几个 tmux 的键绑定。

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -3,3 +3,9 @@ set-option -g default-terminal xterm-256color
 set-option -g prefix C-l
 unbind-key C-b
 bind-key C-l send-prefix
+
+bind-key C-n next-window
+bind-key C-p previous-window
+
+bind-key 2 split-window -v
+bind-key 3 split-window -h
