--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,11 +1,33 @@
-set-option -g default-terminal xterm-256color
+set -g default-terminal "screen-256color"
 
-set-option -g prefix C-l
-unbind-key C-b
-bind-key C-l send-prefix
+set -g prefix C-l
+unbind C-l
+bind C-l send-prefix
 
-bind-key C-n next-window
-bind-key C-p previous-window
+setw -g mode-keys emacs
 
-bind-key 2 split-window -v
-bind-key 3 split-window -h
+set -g base-index 1
+set -g pane-base-index 1
+
+set -g status-bg black
+set -g status-fg white
+
+setw -g window-status-fg cyan
+setw -g window-status-bg default
+setw -g window-status-attr dim
+
+setw -g window-status-current-fg white
+setw -g window-status-current-bg red
+setw -g window-status-current-attr bright
+
+set -g message-fg white
+set -g message-bg black
+set -g message-attr bright
+
+set -g status-left  '#[fg=green]#H'
+set -g status-right '#[fg=yellow]#(uptime | cut -d "," -f 2-)'
+
+set -g status-justify centre
+
+# setw -g monitor-activity on
+# set  -g visual-activity on
