--- a/.tmux.conf
+++ b/.tmux.conf
@@ -4,11 +4,14 @@ set -g prefix C-l
 unbind C-l
 bind C-l send-prefix
 
+set -g history-limit 50000
+
 setw -g mode-keys emacs
 
 set -g base-index 1
 set -g pane-base-index 1
 
+set -g status-utf8 on
 set -g status-bg black
 set -g status-fg white
 
