--- a/.screenrc
+++ b/.screenrc
@@ -4,7 +4,7 @@
 # 系统的全局初始化文件在 /etc/screenrc
 
 # 设置 term                                                                                                                                                                                
-term "xterm-256color"
+term "screen-256color"
 
 # 编码转换
 encoding GBK UTF-8
