--- a/.tmux.conf
+++ b/.tmux.conf
@@ -26,8 +26,8 @@ set -g message-fg white
 set -g message-bg black
 set -g message-attr bright
 
-set -g status-left  '#[fg=green]#H'
-set -g status-right '#[fg=yellow]#(uptime | cut -d "," -f 2-)'
+set -g status-left  '#[fg=green]#{host}'
+set -g status-right "#[fg=yellow]Load:#(uptime|awk '{split(substr($0, index($0, \"load\")), a, \":\"); print a[2]}')"
 
 set -g status-justify centre
 
