--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,7 +1,9 @@
 set -g default-terminal "screen-256color"
+set -g default-shell "$PREFIX/bin/zsh"
 
+# 用 C-l 替换缺省的 C-b
+unbind -n C-b
 set -g prefix C-l
-unbind C-l
 bind C-l send-prefix
 
 set -g history-limit 50000
