增加 tmux 的键绑定 |、-、r。

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -35,3 +35,11 @@ set -g status-justify centre
 
 # setw -g monitor-activity on
 # set  -g visual-activity on
+
+bind | split-window -v
+bind - split-window -h
+unbind '"'
+unbind %
+
+# 重新加载配置文件
+bind r source-file ~/.tmux.conf
