--- a/.tmux.conf
+++ b/.tmux.conf
@@ -16,17 +16,10 @@ set -g pane-base-index 1
 set -g status-bg black
 set -g status-fg white
 
-setw -g window-status-fg cyan
-setw -g window-status-bg default
-setw -g window-status-attr dim
+setw -g window-status-style fg=cyan,bg=default,dim
+setw -g window-status-current-style fg=white,bg=red,bright
 
-setw -g window-status-current-fg white
-setw -g window-status-current-bg red
-setw -g window-status-current-attr bright
-
-set -g message-fg white
-set -g message-bg black
-set -g message-attr bright
+set -g message-style fg=white,bg=black,bright
 
 set -g status-left  '#[fg=green]#{host}'
 set -g status-right "#[fg=yellow]Load:#(uptime|awk '{split(substr($0, index($0, \"load\")), a, \":\"); print a[2]}')"
