使用 default-command 启动 zsh。

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,5 +1,5 @@
 set -g default-terminal "screen-256color"
-set -g default-shell "$PREFIX/bin/zsh"
+set -g default-command "zsh"
 
 # 用 C-l 替换缺省的 C-b
 unbind -n C-b
