调整 Status Line 的显示。

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -15,10 +15,10 @@ set -g renumber-windows on
 # 设置 Pane 的起始下标为1
 set -g pane-base-index 1
 
-# 非当前窗口有内容更新时在 Status 通知
- setw -g monitor-activity on
-# 启用活动警告
-set -g visual-activity on
+# 不监视非当前窗口有 Activity
+setw -g monitor-activity off
+# 有 Activity 时不发送可视化信息（Message）
+set -g visual-activity off
 # Message 显示的时间
 set -g display-time 1000
 # Message 风格
@@ -35,16 +35,18 @@ set -g status-interval 60
 setw -q -g utf8 on
 
 set -g status-left-length 40
-set -g status-left "#[fg=green]#(whoami)@#h"
+set -g status-left "#[fg=Black,bg=SpringGreen4,none] #(whoami)@#h #[fg=SpringGreen4,bg=Black,none]\uE0B0"
 
 # Window List 居中对齐
 set -g status-justify centre
+setw -g window-status-separator ""
 # 非当前 Windows 样式
-setw -g window-status-format "#[fg=#8a8a8a,bg=#080808,dim] #I #W "
+setw -g window-status-format " #I #W #F "
 # 当前 Window 样式
-setw -g window-status-current-format "#[fg=#080808,bg=#00afff,bold] #I #W#{?window_flags,#{window_flags}, } "
+setw -g window-status-current-format "#[fg=SteelBlue,bg=Black,none]\uE0B2#[fg=Black,bg=SteelBlue,none]#I #W #F#[fg=SteelBlue,bg=Black,none]\uE0B0"
 
-set -g status-right "#[fg=#8a8a8a,bg=#080808,none] %H:%M | %b-%d | Load:#(uptime|awk '{split(substr($0, index($0, \"load\")), a, \":\"); print a[2]}') "
+set -g status-right-length 80
+set -g status-right "#[fg=#8a8a8a,bg=Black,none]\uE0B3 %H:%M \uE0B3 %Y-%m-%d \uE0B3#(uptime|awk '{split(substr($0, index($0, \"load\")), a, \":\"); print a[2]}') "
 
 # 操作
 
