激活 extended-keys。

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -1,8 +1,8 @@
 # 基本设置
 
-set -g default-terminal "screen-256color"
-set -g default-command "zsh"
-set -s escape-time 10
+set -g default-terminal screen-256color
+set -g default-command zsh
+set -s escape-time 50
 # 回滚 History 的行数
 set -g history-limit 50000
 set -g focus-events on
@@ -55,6 +55,7 @@ set -g mouse on
 # 复制模式里使用 Emacs 风格的键绑定
 setw -g mode-keys emacs
 setw -g xterm-keys on
+set -s extended-keys always
 
 # 键绑定
 
