关闭 tmux 的鼠标操作。

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -50,8 +50,8 @@ set -g status-right "#[fg=#8a8a8a,bg=Black,none]\uE0B3 %H:%M \uE0B3 %Y-%m-%d \uE
 
 # 操作
 
-# 支持鼠标操作（选中 Pane，调整 Pane 大小等），但是鼠标选择自动复制时要按住 Shift
-set -g mouse on
+# tmux 可以支持鼠标操作（选中 Pane，调整 Pane 大小等），但是鼠标选择自动复制时要按住 Shift，不方便，所以禁用
+set -g mouse off
 # 复制模式里使用 Emacs 风格的键绑定
 setw -g mode-keys emacs
 setw -g xterm-keys on
